# aoc2022

./: .gitignore  Cargo.toml  pyproject.toml  template.py  template.rs
benches/: aoc_benchmark.rs
sols/: 01a.py  01b.py  02a.py  02b.py  03a.py  03b.py  04a.py  04b.py  06a.py  06b.py  07a.py  07b.py  08a.py  09a.py  09b.py  10a.py  10b.py
src/: README.md  a01.rs  a03.rs  a04.rs  b01.rs  b04.rs  lib.rs  main.rs
