[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["red <red@kalab.sk>"]
readme = "README.md"
[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}


[dependencies]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
